# trustshield_360_walmart

./: .gitignore  ARCHITECTURE.md  README.md  contract-info.txt
ai_integrations/: .gitignore  Dockerfile  README.md  comprehensive_test.py  deploy.sh  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  setup.bat  setup.sh
ai_integrations/alerts/: fraud_alerter.py
ai_integrations/analytics/: fraud_analytics.py
ai_integrations/api/: fastapi_app.py  server.py
ai_integrations/app/: streamlit_app.py  walmart_theme.py
ai_integrations/blockchain/: fraud_logger.py
ai_integrations/cortex/: fraud_detection.py  gnn_ring_risk.py  graph_analytics.py  tab_transformer_detector.py
ai_integrations/crypto/: quantum_simulator.py
ai_integrations/data/: fraud_rings.jsonl  phone_theft_scenario.jsonl  sample_transactions.jsonl  sarah_scenario.jsonl
ai_integrations/demo/: demo_scripts.py  presentation_slides.md  video_script.md
ai_integrations/explainability/: fraud_explainer.py
ai_integrations/mobile_wallet/: App.tsx  package.json
ai_integrations/mobile_wallet/src/screens/: BiometricAuthScreen.tsx
blockchain_test/: BLOCKCHAIN_SETUP.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.simple  README.md  RENDER_DEPLOYMENT.md  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  render-server.js  render.yaml  server.js  simple-server.js  test-render.js
trustshield-cli/: .env.example  .gitignore  README.md  cli.js  cli.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json
web/: .env.sample  (+7 more)
(+65 files in other folders)
