[project]
name = "walmart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flash>=1.0.3",
    "flask-cors>=6.0.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "networkx>=3.3.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.19.0",
    "streamlit>=1.35.0",
    "tab-transformer-pytorch>=0.4.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.28.0",
    "torch-geometric>=2.5.0; platform_system!='Windows'",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "shap>=0.44.0",
    "web3>=6.15.0",
    "eth-account>=0.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
